# pdal-scaffolding

./: .gitignore  CMakeLists.txt  README.md  new-plugin  test-build  test-build.json
common/: CMakeLists.txt  README.md.in  conanfile.py.in
common/cmake/: BuildInfo.cmake  cpack.cmake  cpack.cmake.in  dependencies.cmake  version.cmake
filter/: CMakeLists.txt  CMakeLists.txt.in
filter/src/: BuildInfo.hpp.in  CMakeLists.txt.in  F.cpp.in  F.hpp.in  T.cpp.in  T.hpp.in
filter/test/: CMakeLists.txt.in  UnitTest.cpp.in  driver.cpp.in
kernel/: CMakeLists.txt  CMakeLists.txt.in
kernel/src/: CMakeLists.txt.in  K.cpp.in  K.hpp.in
